SVG-Datei ist jetzt uniform schwarz. Es gibt jetzt ein Fallback für veraltete Browser.

--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@ a {
 	text-decoration: none;
 }
 
+.logo{
+    float:right; 
+    cursor:default; 
+    border:0;
+}
+
+.no-svg .logo {
+  height: 55px;
+  background-image: url(img/Chaosknoten.jpg);
+}
+
 @media print{
 	body{
 		max-width:none
